--- a/6.tex
+++ b/6.tex
@@ -3,11 +3,13 @@
 \usepackage[utf8]{inputenc}
 \usepackage{amssymb, amsmath, amsthm}
 \usepackage{graphics, graphicx}
+\usepackage{hyperref}
 \graphicspath{{./6.9/}}
 \pagestyle{empty}
-\newtheorem{lemma}{Lemma}
-\newtheorem{thm}{Theorem}
-
+\hypersetup{
+  colorlinks   = true, %Colours links instead of ugly boxes
+  urlcolor     = blue, %Colour for external hyperlinks
+}
 \begin{document}
 \textbf{Chapter 6 solutions  \hfill Hanna Gábor}\\
 
@@ -152,6 +154,8 @@ a ninth action that causes no movement at all other than that caused by the wind
 The ninth action doesn't help, the minimum number of steps is also available with
 eight options. As there are more possibilities, it makes the learning a bit slower.
 
+The code can be found \href{https://github.com/hannagabor/SBRL}{here}.
+
 \begin{center}
   \includegraphics[scale=0.8]{must_move_plot}
   \includegraphics[scale=0.8]{no_movement_plot}
@@ -160,7 +164,29 @@ eight options. As there are more possibilities, it makes the learning a bit slow
 Example trajectory:
 
 \begin{center}
-\includegraphics[scale=0.8]{trajectory}
+\includegraphics[scale=0.5]{trajectory}
+\end{center}
+
+\item
+\textit{Stochastic Wind. (Programming.) Re-solve the windy gridworld task with
+King’s moves, assuming that the effect of the wind, if there is any, is stochastic, sometimes
+varying by 1 from the mean values given for each column. That is, a third of the time
+you move exactly according to these values, as in the previous exercise, but also a third
+of the time you move one cell above that, and another third of the time you move one
+cell below that. For example, if you are one cell to the right of the goal and you move
+left, then one-third of the time you move one cell above the goal, one-third of the time
+you move two cells above the goal, and one-third of the time you move to the goal.}
+
+Apparently, this makes the problem much more difficult. The code can be found \href{https://github.com/hannagabor/SBRL/blob/6.9/windy_gridworld.ipynb}{here}.
+
+\begin{center}
+  \includegraphics[scale=0.8]{stochastic_must_move_plot}
+  \includegraphics[scale=0.8]{stochastic_no_movement_plot}
+\end{center}
+
+An example trajectory:
+\begin{center}
+\includegraphics[scale=0.8]{stochastic_trajectory}
 \end{center}
 
 \end{enumerate}
