Fix links again.

--- a/6.tex
+++ b/6.tex
@@ -154,7 +154,7 @@ a ninth action that causes no movement at all other than that caused by the wind
 The ninth action doesn't help, the minimum number of steps is also available with
 eight options. As there are more possibilities, it makes the learning a bit slower.
 
-The code can be found \href{https://github.com/hannagabor/SBRL/blob/master/6.9/windy_gridworld.ipynb}{here}.
+The code can be found at \url{https://github.com/hannagabor/SBRL/blob/master/6.9/windy_gridworld.ipynb}.
 
 \begin{center}
   \includegraphics[scale=0.8]{must_move_plot}
@@ -177,8 +177,8 @@ cell below that. For example, if you are one cell to the right of the goal and y
 left, then one-third of the time you move one cell above the goal, one-third of the time
 you move two cells above the goal, and one-third of the time you move to the goal.}
 
-Apparently, this makes the problem much more difficult. The code can be found \href{https://github.com/hannagabor/SBRL/blob/master/6.9/windy_gridworld.ipynb}{here}.
-
+Apparently, this makes the problem much more difficult.
+The code can be found at \url{https://github.com/hannagabor/SBRL/blob/master/6.9/windy_gridworld.ipynb}.
 \begin{center}
   \includegraphics[scale=0.8]{stochastic_must_move_plot}
   \includegraphics[scale=0.8]{stochastic_no_movement_plot}
