--- a/7.tex
+++ b/7.tex
@@ -57,6 +57,14 @@
     \includegraphics[scale=0.45]{0.005}
     \end{center}
 
+  \item
+    \textit{Why do you think a larger random walk task (19 states instead of 5) was used in the examples of this chapter? Would a smaller walk have shifted the advantage to a different value of n? How about the change in left-side outcome from 0 to -1 made in the larger walk? Do you think that made any difference in the best value of n?}
+
+    If $n$ is big, but the random walk has only a few states, then there is a
+    higher chance that we update states that are far from the end state. That
+    sounds bad.
+
+
 
 \end{enumerate}
 \end{document}
