--- a/7.tex
+++ b/7.tex
@@ -64,7 +64,32 @@
     higher chance that we update states that are far from the end state. That
     sounds bad.
 
+    As for the left-side outcome: I can't see any change.
 
+  \item
+    \textit{Prove that the n-step return of Sarsa (7.4) can be written exactly in
+    terms of a novel TD error, as
+    \[G_{t: t + n} = Q_{t - 1}(S_t, A_t) + \sum\limits_{k = t}^{min(t + n, T) - 1}
+    \gamma^{k - t}(R_{k + 1} + \gamma Q_k(S_{k + 1}, A_{k + 1}) - Q_{k - 1}(S_k, A_k))\]
+    }
+
+    \begin{align*}
+    G_{t: t + n} &= R_{t + 1} + \gamma G_{t + 1: t + n}
+    + Q_{t - 1}(S_t, A_t) - Q_{t - 1}(S_t, A_t)\\
+    &+ \gamma Q_t(S_{t + 1}, A_{t + 1}) - \gamma Q_t(S_{t + 1}, A_{t + 1})\\
+    &=Q_{t - 1}(S_t, A_t) + (R_{t + 1} + \gamma Q_t(S_{t + 1}, A_{t + 1})
+    - Q_{t - 1}(S_t, A_t))\\
+    &+ \gamma(G_{t + 1: t + n} - Q_t(S_{t + 1}, A_{t + 1}))\\
+    &+ \gamma^2 Q_{t + 1}(S_{t + 2}, A_{t + 2}) - \gamma^2 Q_{t + 1}(S_{t + 2}, A_{t + 2})\\
+    &= Q_{t - 1}(S_t, A_t)
+    + (R_{t + 1} + \gamma Q_t(S_{t + 1}, A_{t + 1}) - Q_{t - 1}(S_t, A_t))\\
+    &+ \gamma(R_{t + 2} + \gamma^2 Q_{t + 1}(S_{t + 2}, A_{t + 2}) - Q_t(S_{t + 1}, A_{t + 1}))\\
+    &+ \gamma^2(G_{t + 2: t + n} - Q_{t + 1}(S_{t + 2}, A_{t + 2}))\\
+    &+ \gamma^3 Q_{t + 2}(S_{t + 3}, A_{t + 3}) - \gamma^2 Q_{t + 2}(S_{t + 3}, A_{t + 3})\\
+    &\dots\\
+    &= Q_{t - 1}(S_t, A_t) + \sum\limits_{k = t}^{min(t + n, T) - 1}
+    \gamma^{k - t}(R_{k + 1} + \gamma Q_k(S_{k + 1}, A_{k + 1}) - Q_{k - 1}(S_k, A_k))
+    \end{align*}
 
 \end{enumerate}
 \end{document}
