--- a/7.tex
+++ b/7.tex
@@ -289,5 +289,27 @@
     \includegraphics[scale=0.45]{off_0.005}
     \end{center}
 
+  \item
+    \textit{Show that if the approximate action values are unchanging, then the
+    tree-backup return (7.16) can be written as a sum of expectation-based TD errors:
+    \[G_{t: t + n} = Q(S_t, A_t) + \sum\limits_{k = t}^{min(t + n - 1, T - 1)}
+    \delta_k \prod\limits_{i = t + 1}^k \gamma \pi(A_i|S_i)\]
+    where $\delta_t = R_{t + 1} + \gamma\bar{V}_t(S_{t + 1}) - Q(S_t, A_t)$ and
+    $\bar{V}_t$ is given by (7.8).}
+
+    \begin{align*}
+      G_{t: t + n} &= R_{t + 1} + \gamma \sum\limits_{a \neq A_{t + 1}} \pi(a|S_{t + 1})
+      Q(S_{t + 1}, a) + \gamma \pi(A_{t + 1}|S_{t + 1}) G_{t + 1: t + n}\\
+      &= Q(S_t, A_t) + R_{t + 1} + \gamma \bar{V}_t(S_{t + 1}) - Q(S_t, A_t)\\
+      &+ \gamma \pi (A_{t + 1}|S_{t + 1})(G_{t + 1: t + n} - Q(S_{t + 1}, A_{t + 1}))\\
+      &= Q(S_t, A_t) + R_{t + 1} + \gamma \bar{V}_t(S_{t + 1}) - Q(S_t, A_t)\\
+      &+ \gamma \pi (A_{t + 1}|S_{t + 1}) \Big(R_{t + 2} + \gamma \bar{V}_t(S_{t + 2}) - Q(S_{t + 1}, A_{t + 1})\Big)\\
+      &+ \gamma^2 \pi (A_{t + 1}|S_{t + 1}) \pi(A_{t + 2}|S_{t + 2}) (G_{t + 2: t + n}
+      - Q(S_{t + 2}, A_{t + 2}))\\
+      &= \dots\\
+      &= Q(S_t, A_t) + \sum\limits_{k = t}^{min(t + n - 1, T - 1)}
+      \delta_k \prod\limits_{i = t + 1}^k \gamma \pi(A_i|S_i)
+    \end{align*}
+
 \end{enumerate}
 \end{document}
