--- a/8.tex
+++ b/8.tex
@@ -43,5 +43,22 @@
 
     After finding the optimal path, Dyna-Q always uses that path, whereas Dyna-Q+
     does some exploration from time to time.
+
+  \item
+    \textit{Programming. The exploration bonus described above actually changes
+    the estimated values of states and actions. Is this necessary? Suppose the bonus
+    $\kappa \sqrt{\tau}$ was used not in updates, but solely in action selection.
+    That is, suppose the action selected was always that for which $Q(S_t, a) +
+    \kappa \sqrt{\tau (S_t, a)}$ was maximal. Carry out a gridworld experiment
+    that tests and illustrates the strengths and weaknesses of this alternate approach.}
+
+    My expectation is that in some cases it's worse to use the bonus only in the
+    action selection. Suppose that we need a series of exploratory steps to find
+    the shortcut. If we update the actual values, then once the exploration bonus
+    is big enough, we will soon find the shortcut. If we only use the bonus for action
+    selection, it might happen that we take one exploratory step but before reaching the
+    shortcut, we get back to the old path. If this happens, we will need to wait until
+    the first exploratory step accumulates a huge bonus again to go down on that
+    path again.
 \end{enumerate}
 \end{document}
